remove log and fix spacing of spinner

--- a/shared/ui/styles/login.less
+++ b/shared/ui/styles/login.less
@@ -69,7 +69,7 @@
 	}
 	.spin {
 		flex-basis: 100%;
-		margin: 8px;
+		margin: 6px;
 	}
 	.copy {
 		padding-left: 10px;
